--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.9",
@@ -11,6 +12,7 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "autoprefixer": "10.x",
+    "axios": "^0.21.1",
     "cross-env": "7.x",
     "npm-run-all": "4.x",
     "postcss": "8.x",
@@ -20,7 +22,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "tailwindcss": "2.x",
-    "typescript": "4.x"
+    "typescript": "4.x",
+    "valtio": "^1.0.4"
   },
   "scripts": {
     "start": "run-p watch:css react-scripts:start",
